<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_navigate_back"
        tools:title="Заголовок">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/status_chip_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="24dp" />

    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/content_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/work_permit_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:paddingHorizontal="24dp"
                    android:textAppearance="@style/Text.H2"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Наряд-допуск\n№12344" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/work_type_chip_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/work_permit_title" />

                <TextView
                    android:id="@+id/created_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingHorizontal="24dp"
                    android:textAppearance="@style/Text.P3"
                    app:layout_constraintTop_toBottomOf="@id/work_type_chip_container"
                    tools:text="Создан 17.08.2022" />

                <TextView
                    android:id="@+id/place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingHorizontal="24dp"
                    android:textAppearance="@style/Text.P3"
                    app:layout_constraintTop_toBottomOf="@id/created_date"
                    tools:text="Москва, ул. Габена 65" />

                <TextView
                    android:id="@+id/workers_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingHorizontal="24dp"
                    android:textAppearance="@style/Text.P3"
                    app:layout_constraintTop_toBottomOf="@id/place"
                    tools:text="Работников: 12" />

                <include
                    android:id="@+id/document_container"
                    layout="@layout/layout_document"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/workers_count" />

                <LinearLayout
                    android:id="@+id/menu_options_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:divider="@drawable/divider_linear_layout"
                    android:dividerPadding="24dp"
                    android:orientation="vertical"
                    android:showDividers="middle|end"
                    app:layout_constraintTop_toBottomOf="@id/document_container" />

                <TextView
                    android:id="@+id/check_risk_factors_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/background_rounded_corners_outline_blue"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="8dp"
                    android:text="@string/text_check_risk_factors"
                    android:textAppearance="@style/Text.P3"
                    android:textColor="@color/blue"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/menu_options_container" />

                <TextView
                    android:id="@+id/check_risk_factors_warning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:paddingHorizontal="24dp"
                    android:text="@string/text_check_risk_factors_warning"
                    android:textAppearance="@style/Text.P3"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/check_risk_factors_btn" />

                <LinearLayout
                    android:id="@+id/buttons_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:animateLayoutChanges="true"
                    android:clipToPadding="false"
                    android:orientation="vertical"
                    android:paddingHorizontal="24dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@id/offline_pending_action_warning"
                    app:layout_constraintTop_toBottomOf="@id/check_risk_factors_warning"
                    app:layout_constraintVertical_bias="1">

                    <ru.metasharks.catm.core.ui.view.LoadingMaterialButtonWrapper
                        android:id="@+id/primary_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:progressIndicatorSizeSubtrahend="24dp">

                        <com.google.android.material.button.MaterialButton
                            style="@style/Button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/btn_send_to_signing_text"
                            tools:text="Отправить на согласование" />

                    </ru.metasharks.catm.core.ui.view.LoadingMaterialButtonWrapper>

                    <ru.metasharks.catm.core.ui.view.LoadingMaterialButtonWrapper
                        android:id="@+id/secondary_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:visibility="gone"
                        app:progressIndicatorSizeSubtrahend="24dp"
                        tools:visibility="visible">

                        <com.google.android.material.button.MaterialButton
                            style="@style/OutlinedButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/btn_delete_text"
                            tools:text="Удалить" />

                    </ru.metasharks.catm.core.ui.view.LoadingMaterialButtonWrapper>

                </LinearLayout>

                <TextView
                    android:id="@+id/offline_pending_action_warning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="24dp"
                    android:paddingHorizontal="24dp"
                    android:text="@string/warning_awaiting_pending_action"
                    android:textAppearance="@style/Text.P3"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="1"
                    tools:text="Запрос не отправлен на сервер. ds  Отсутствует сеть Интернет."
                    tools:visibility="visible" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
